force-app/main/default/objects/Geo_Config__mdt/Geo_Config__mdt.object-meta.xml
<CustomObject>
    <label>Geo Config</label>
    <pluralLabel>Geo Configs</pluralLabel>
</CustomObject>