force-app/main/default/objects/Geo_Config__mdt/fields/Config_Type__c.field-meta.xml
<CustomField>
    <fullName>Config_Type__c</fullName>
    <label>Config Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Check-In Radius</fullName>
            </value>
            <value>
                <fullName>Day Start Radius</fullName>
            </value>
            <value>
                <fullName>Tracking Interval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>